feat: ✨ Jug summer camp 2025 (#9)
* fix: ⬆️ Version upgrade

* fix: 🐛 Java 24 warnings

* fix: 🐛 Java 24 warnings

* feat: ✨ JUG Summer Camp question

* fix: 🐛 Deactivate Java 24 warnings

* conf: ⬆️ Upgrade quarkus-lanchain4j

* feat: ✨ JUG Summer Camp message

* doc: 📝 Add explanation for RAG issue

* conf: ⬆️ Update easy RAG version

* conf: ⚙️ Snippet update

* conf: ⚙️ Data for RAG demo for JUG Summer Camp

* fix: 🐛 Only display command